// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Chart > should be able to render Chart component 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
    >
      Your carbon footprint
    </h5>
    <div
      class="mt-8 flex w-full items-center"
    >
      <div
        class="css-1tfmlru-MuiResponsiveChart-container"
      >
        <svg
          class="css-13aj3tc-MuiChartsSurface-root"
          height="300"
          viewBox="0 0 600 300"
          width="600"
        >
          <title />
          <desc />
          <defs />
          <g>
            <g
              transform="translate(252.5, 150)"
            >
              <g>
                <path
                  class="MuiPieArc-root MuiPieArc-series-auto-generated-id-0 css-1mhcdve-MuiPieArc-root"
                  cursor="unset"
                  d="M27.745,-66.981L0,0Z"
                  style="fill: #007EA7; opacity: 1;"
                />
                <path
                  class="MuiPieArc-root MuiPieArc-series-auto-generated-id-0 css-1mhcdve-MuiPieArc-root"
                  cursor="unset"
                  d="M62.787,36.25L0,0Z"
                  style="fill: #1DD1A0; opacity: 1;"
                />
                <path
                  class="MuiPieArc-root MuiPieArc-series-auto-generated-id-0 css-1mhcdve-MuiPieArc-root"
                  cursor="unset"
                  d="M-36.25,62.787L0,0Z"
                  style="fill: #9F7E69; opacity: 1;"
                />
                <path
                  class="MuiPieArc-root MuiPieArc-series-auto-generated-id-0 css-1mhcdve-MuiPieArc-root"
                  cursor="unset"
                  d="M-66.981,-27.745L0,0Z"
                  style="fill: #FFCAE9; opacity: 1;"
                />
              </g>
            </g>
            <g
              transform="translate(252.5, 150)"
            >
              <g>
                <text
                  class="MuiPieArcLabel-root MuiPieArcLabel-series-auto-generated-id-0 css-ixpz1i-MuiPieArcLabel-root"
                  style="opacity: 0; transform: none;"
                />
                <text
                  class="MuiPieArcLabel-root MuiPieArcLabel-series-auto-generated-id-0 css-ixpz1i-MuiPieArcLabel-root"
                  style="opacity: 0; transform: none;"
                />
                <text
                  class="MuiPieArcLabel-root MuiPieArcLabel-series-auto-generated-id-0 css-ixpz1i-MuiPieArcLabel-root"
                  style="opacity: 0; transform: none;"
                />
                <text
                  class="MuiPieArcLabel-root MuiPieArcLabel-series-auto-generated-id-0 css-ixpz1i-MuiPieArcLabel-root"
                  style="opacity: 0; transform: none;"
                />
              </g>
            </g>
          </g>
          <g
            class="MuiChartsLegend-root MuiChartsLegend-column css-1u0lry5-MuiChartsLegend-root"
          >
            <g
              class="MuiChartsLegend-series"
              transform="translate(555 105)"
            >
              <rect
                class="MuiChartsLegend-mark"
                fill="#007EA7"
                height="20"
                width="20"
                x="0"
                y="-10"
              />
              <text
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 1rem; line-height: 1; letter-spacing: 0.00938em; fill: rgba(0, 0, 0, 0.87);"
                text-anchor="start"
                x="25"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="25"
                >
                  Electricity
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsLegend-series"
              transform="translate(555 135)"
            >
              <rect
                class="MuiChartsLegend-mark"
                fill="#1DD1A0"
                height="20"
                width="20"
                x="0"
                y="-10"
              />
              <text
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 1rem; line-height: 1; letter-spacing: 0.00938em; fill: rgba(0, 0, 0, 0.87);"
                text-anchor="start"
                x="25"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="25"
                >
                  Transportation
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsLegend-series"
              transform="translate(555 165)"
            >
              <rect
                class="MuiChartsLegend-mark"
                fill="#9F7E69"
                height="20"
                width="20"
                x="0"
                y="-10"
              />
              <text
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 1rem; line-height: 1; letter-spacing: 0.00938em; fill: rgba(0, 0, 0, 0.87);"
                text-anchor="start"
                x="25"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="25"
                >
                  Air Travel
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsLegend-series"
              transform="translate(555 195)"
            >
              <rect
                class="MuiChartsLegend-mark"
                fill="#FFCAE9"
                height="20"
                width="20"
                x="0"
                y="-10"
              />
              <text
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 1rem; line-height: 1; letter-spacing: 0.00938em; fill: rgba(0, 0, 0, 0.87);"
                text-anchor="start"
                x="25"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="25"
                >
                  Dietary Choice
                </tspan>
              </text>
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
  <div
    class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
    >
      Carbon Footprint Breakdown
    </h6>
    <ul
      class="mt-4"
    >
      <li
        class="flex justify-between"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
        >
          Electricity
        </p>
        <span
          class="flex items-center gap-2"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1gvvk8k-MuiTypography-root"
          >
            300.00
          </p>
          <strong>
            kgCO2e/year
          </strong>
        </span>
      </li>
      <li
        class="flex justify-between"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
        >
          Transportation
        </p>
        <span
          class="flex items-center gap-2"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1gvvk8k-MuiTypography-root"
          >
            1000.00
          </p>
          <strong>
            kgCO2e/year
          </strong>
        </span>
      </li>
      <li
        class="flex justify-between"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
        >
          Air Travel
        </p>
        <span
          class="flex items-center gap-2"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1gvvk8k-MuiTypography-root"
          >
            200.00
          </p>
          <strong>
            kg
          </strong>
        </span>
      </li>
      <li
        class="flex justify-between"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
        >
          Dietary Choice
        </p>
        <span
          class="flex items-center gap-2"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1gvvk8k-MuiTypography-root"
          >
            900.00
          </p>
          <strong>
            kgCO2e/year
          </strong>
        </span>
      </li>
      <li
        class="flex justify-between"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
        >
          Total Emissions
        </p>
        <span
          class="flex items-center gap-2"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1gvvk8k-MuiTypography-root"
          >
            1000.00
          </p>
          <strong>
            kgCO2e/year
          </strong>
        </span>
      </li>
    </ul>
  </div>
  <div
    class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
    >
      Your carbon footprint is calculated based on the data you provided. The data is calculated using the latest carbon footprint calculation methods and is an estimate. The data is not 100% accurate and should be used as a reference only.
    </p>
     
    <br />
    <p
      class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
    >
      You can test different scenarios by changing the data you provided and see how it affects your carbon footprint. You can also see how different choices can help you reduce your carbon footprint.
    </p>
  </div>
  <div
    class="MuiCardContent-root flex w-full justify-center css-46bh2p-MuiCardContent-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary css-f76bo7-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Try again with different values
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Chart > should be able to render Chart without unit 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
    >
      Your carbon footprint
    </h5>
    <div
      class="mt-8 flex w-full items-center"
    >
      <div
        class="css-1tfmlru-MuiResponsiveChart-container"
      >
        <svg
          class="css-13aj3tc-MuiChartsSurface-root"
          height="300"
          viewBox="0 0 600 300"
          width="600"
        >
          <title />
          <desc />
          <defs />
          <g>
            <g
              transform="translate(252.5, 150)"
            >
              <g>
                <path
                  class="MuiPieArc-root MuiPieArc-series-auto-generated-id-0 css-1mhcdve-MuiPieArc-root"
                  cursor="unset"
                  d="M27.745,-66.981L0,0Z"
                  style="fill: #007EA7; opacity: 1;"
                />
                <path
                  class="MuiPieArc-root MuiPieArc-series-auto-generated-id-0 css-1mhcdve-MuiPieArc-root"
                  cursor="unset"
                  d="M62.787,36.25L0,0Z"
                  style="fill: #1DD1A0; opacity: 1;"
                />
                <path
                  class="MuiPieArc-root MuiPieArc-series-auto-generated-id-0 css-1mhcdve-MuiPieArc-root"
                  cursor="unset"
                  d="M-36.25,62.787L0,0Z"
                  style="fill: #9F7E69; opacity: 1;"
                />
                <path
                  class="MuiPieArc-root MuiPieArc-series-auto-generated-id-0 css-1mhcdve-MuiPieArc-root"
                  cursor="unset"
                  d="M-66.981,-27.745L0,0Z"
                  style="fill: #FFCAE9; opacity: 1;"
                />
              </g>
            </g>
            <g
              transform="translate(252.5, 150)"
            >
              <g>
                <text
                  class="MuiPieArcLabel-root MuiPieArcLabel-series-auto-generated-id-0 css-ixpz1i-MuiPieArcLabel-root"
                  style="opacity: 0; transform: none;"
                />
                <text
                  class="MuiPieArcLabel-root MuiPieArcLabel-series-auto-generated-id-0 css-ixpz1i-MuiPieArcLabel-root"
                  style="opacity: 0; transform: none;"
                />
                <text
                  class="MuiPieArcLabel-root MuiPieArcLabel-series-auto-generated-id-0 css-ixpz1i-MuiPieArcLabel-root"
                  style="opacity: 0; transform: none;"
                />
                <text
                  class="MuiPieArcLabel-root MuiPieArcLabel-series-auto-generated-id-0 css-ixpz1i-MuiPieArcLabel-root"
                  style="opacity: 0; transform: none;"
                />
              </g>
            </g>
          </g>
          <g
            class="MuiChartsLegend-root MuiChartsLegend-column css-1u0lry5-MuiChartsLegend-root"
          >
            <g
              class="MuiChartsLegend-series"
              transform="translate(555 105)"
            >
              <rect
                class="MuiChartsLegend-mark"
                fill="#007EA7"
                height="20"
                width="20"
                x="0"
                y="-10"
              />
              <text
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 1rem; line-height: 1; letter-spacing: 0.00938em; fill: rgba(0, 0, 0, 0.87);"
                text-anchor="start"
                x="25"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="25"
                >
                  Electricity
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsLegend-series"
              transform="translate(555 135)"
            >
              <rect
                class="MuiChartsLegend-mark"
                fill="#1DD1A0"
                height="20"
                width="20"
                x="0"
                y="-10"
              />
              <text
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 1rem; line-height: 1; letter-spacing: 0.00938em; fill: rgba(0, 0, 0, 0.87);"
                text-anchor="start"
                x="25"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="25"
                >
                  Transportation
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsLegend-series"
              transform="translate(555 165)"
            >
              <rect
                class="MuiChartsLegend-mark"
                fill="#9F7E69"
                height="20"
                width="20"
                x="0"
                y="-10"
              />
              <text
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 1rem; line-height: 1; letter-spacing: 0.00938em; fill: rgba(0, 0, 0, 0.87);"
                text-anchor="start"
                x="25"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="25"
                >
                  Air Travel
                </tspan>
              </text>
            </g>
            <g
              class="MuiChartsLegend-series"
              transform="translate(555 195)"
            >
              <rect
                class="MuiChartsLegend-mark"
                fill="#FFCAE9"
                height="20"
                width="20"
                x="0"
                y="-10"
              />
              <text
                dominant-baseline="central"
                style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-weight: 400; font-size: 1rem; line-height: 1; letter-spacing: 0.00938em; fill: rgba(0, 0, 0, 0.87);"
                text-anchor="start"
                x="25"
                y="0"
              >
                <tspan
                  dominant-baseline="central"
                  dy="0px"
                  x="25"
                >
                  Dietary Choice
                </tspan>
              </text>
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
  <div
    class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
    >
      Carbon Footprint Breakdown
    </h6>
    <ul
      class="mt-4"
    >
      <li
        class="flex justify-between"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
        >
          Electricity
        </p>
        <span
          class="flex items-center gap-2"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1gvvk8k-MuiTypography-root"
          >
            300.00
          </p>
          <strong>
            kgCO2e/year
          </strong>
        </span>
      </li>
      <li
        class="flex justify-between"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
        >
          Transportation
        </p>
        <span
          class="flex items-center gap-2"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1gvvk8k-MuiTypography-root"
          >
            1000.00
          </p>
          <strong>
            kgCO2e/year
          </strong>
        </span>
      </li>
      <li
        class="flex justify-between"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
        >
          Air Travel
        </p>
        <span
          class="flex items-center gap-2"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1gvvk8k-MuiTypography-root"
          >
            200.00
          </p>
          <strong>
            kg
          </strong>
        </span>
      </li>
      <li
        class="flex justify-between"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
        >
          Dietary Choice
        </p>
        <span
          class="flex items-center gap-2"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1gvvk8k-MuiTypography-root"
          >
            900.00
          </p>
          <strong>
            kgCO2e/year
          </strong>
        </span>
      </li>
      <li
        class="flex justify-between"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
        >
          Total Emissions
        </p>
        <span
          class="flex items-center gap-2"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1gvvk8k-MuiTypography-root"
          >
            0.00
          </p>
          <strong>
            kg
          </strong>
        </span>
      </li>
    </ul>
  </div>
  <div
    class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
    >
      Your carbon footprint is calculated based on the data you provided. The data is calculated using the latest carbon footprint calculation methods and is an estimate. The data is not 100% accurate and should be used as a reference only.
    </p>
     
    <br />
    <p
      class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
    >
      You can test different scenarios by changing the data you provided and see how it affects your carbon footprint. You can also see how different choices can help you reduce your carbon footprint.
    </p>
  </div>
  <div
    class="MuiCardContent-root flex w-full justify-center css-46bh2p-MuiCardContent-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary css-f76bo7-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Try again with different values
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Chart > should not be able to render Chart component without footprint 1`] = `null`;
